added all old files

--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>ITMD-361 Internet Technologies and Web Design
+</title>
+</head>
+  <body>
+    <h1> Summer Project One: Valid, Responsive-Ready HTML </h1>
+    <h3> Project Description: </h3>
+    <p>Create three richly structured HTML pages that will form the foundations of a professional web presence for yourself. One of the pages must be your professional resume. </p>
+     <h3> Project Goals: </h3>
+       <ul>
+         <li> Write standard-complaint HTML-5</li>
+         <li> Use HTML validator to assure compliance</li>
+         <li> Track the development of a project over time and collaborate with other using Basecamp</li>
+      </ul>
+    <nav>
+    <iframe src="https://giphy.com/embed/qVmFtTnGQTCso" width="480" height="270" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/agconti-beach-hiking-qVmFtTnGQTCso">via GIPHY</a>
+    <h3>A little bit about me:</h3>
+      <ul> 
+        <li>I was born in Ukraine, lived in the United States for 10 years</li>
+        <li>I can speak Ukrainian, Russian and English</li>
+        <li>Love to travel! </li>
+        <li>Enjoy camping, hiking and fishing!</li>
+      </ul>  
+        <h3> Links: </h3>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="resume.html">Resume</a></li>
+            <li><a href="countries.html">Countries Visited</a></li>
+        </ul>
+    </nav>
+  </body>
+</html>
+     
+   
