--- a/resume.html
+++ b/resume.html
@@ -1,1 +1,58 @@
-r
+<!DOCTYPE HTML>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>My Resume</title>
+</head>
+  <body>
+    <nav>
+          <h3> Links: </h3>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="resume.html">Resume</a></li>
+              <li><a href="countries.html">Countries Visited</a></li>
+            </ul>
+    </nav>
+    <h1>Resume</h1>
+    <h3>Name: Andy Dimnych</h3>
+    <h2>Contact Details</h2>
+      <ul>
+        <li>Email adimnych@hawk.iit.edu</li>
+      </ul>
+    <h3>Education</h3>
+      <ul>
+        <li>Highschool Diploma - Von Steuben Metropolitan Science Center 2008 - 2012</li>
+        <li>Currently a Senior at IIT pursuing Bachelors in Information Technology Management and Master's Degree in Cyber Security
+        <ul>
+          <li>Current GPA 3.75</li>
+        </ul>
+      </ul>
+    <h2>Computer Skills</h2>
+      <ul>
+        <li>Microsoft Word,Excel, PowerPoint</li>
+        <li>Building/Repairing Desktops/Laptops</li>
+        <li>Quickbooks</li> 
+        <li>Email and Social Skills</li>
+      </ul>
+    <h2>Profeccient in Programming Languages</h2>
+      <ul>
+        <li>Python</li>
+        <li>Java</li>
+        <li>Ruby</li>
+        <li>C</li>
+      </ul>
+    <h2>My Work Experience</h2>
+    <p>I have had countless jobs doing construction and heating and cooling with my fathers company, but now I am unemployeed because I am a full time student. </p>
+    <h2>References</h2>
+    <p>Oksana Smith</p>
+    <ul>
+      <li>Email: Oksanachiago@yahoo.com </li>
+      <li>Number: 773-***-****</li>
+    </ul>
+    <p>Anatoliy Kostytskyy </p>
+    <ul>
+      <li>Email: Anakostytskyy@yahoo.com </li>
+      <li>Number: 773-***-****</li>
+    </ul>
+  </body>
+</html>
