--- a/countries.html
+++ b/countries.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+<meta charset="UTF-8">
+<title>Countries I have visited 
+</title>
+  </head>
+  <body>
+    <h1> Countries I have visited!</h1>
+    <nav>
+    <h3> Links: </h3>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="countries.html">Countries Visited</a></li>
+      </ul>
+    </nav>
+    <h3> Summer 2016 </h3>
+    <p> Last Summer, I have visited Bulgaria, Hungary, Spain, Italy and Ukraine.</p>
+    <p>In Bulgaria, cities I've visited: </p>
+     <ul>
+       <li> Sofia</li>
+       <li> Plovdiv</li>
+       <li> Borovets</li>
+     </ul>
+    <p> This is Borovets</p>
+    <img src="Countries/Bulgaria.JPG" alt= "Mountains">
+    <p>In Ukraine, I've visited:</p>
+     <ul>
+       <li> Kiev</li>
+       <li> Lviv</li>
+       <li> Ivanov Frankivsk</li>
+     </ul>
+     <p> This is Ivanov Frankivsk</p>
+     <img src="Countries/Ukraine.JPG" alt= "Ukraine">
+     <p> In Spain, I've visited only Barcelona, and I've missed to go to the La Familia Sangrada because it was too packed</p>
+     <iframe width ="854" height= "480" src="https://www.youtube.com/embed/3smh2bIArms"></iframe>
+     <p> This is Barcelona Beach!</p>
+     <img src="Countries/Barcelona.JPG" alt= "Barcelona">
+     <p> In Hungary, I've visited only Budapest</p>
+     <p> This is a castle in Hungary!</p>
+     <img src="Countries/Budapest.JPG" alt= "Castle">
+     <p> In Italy, I've visited only Rome for a couple hours</p>
+     <p> This is the Colosseum !</p>
+     <img src="Countries/Rome.JPG" alt= "Colosseum">
+  </body>
+</html>
 
