--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<link rel="stylesheet" type="text/css" href="normalize.css">
 <title>ITMD-361 Internet Technologies and Web Design
 </title>
 </head>
