added norm to both countries and reseume
the normalization

--- a/countries.html
+++ b/countries.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-<meta charset="UTF-8">
-<title>Countries I have visited 
-</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="normalize.css">
+    <title>Countries I have visited 
+    </title>
   </head>
   <body>
     <h1> Countries I have visited!</h1>
