Changed my navigation bar

--- a/countries.html
+++ b/countries.html
@@ -7,15 +7,12 @@
     </title>
   </head>
   <body>
-    <h1> Countries I have visited!</h1>
     <nav>
-    <h3> Links: </h3>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="resume.html">Resume</a></li>
-        <li><a href="countries.html">Countries Visited</a></li>
-      </ul>
+    <a href="index.html">Home</a>
+    <a href="resume.html">Resume</a>
+    <a href="countries.html">Countries Visited</a>
     </nav>
+    <h1> Countries I have visited!</h1>
     <h3> Summer 2016 </h3>
     <p> Last Summer, I have visited Bulgaria, Hungary, Spain, Italy and Ukraine.</p>
     <p>In Bulgaria, cities I've visited: </p>
