changed the nav bar to the top

--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" href="normalize.css">
-<title>ITMD-361 Internet Technologies and Web Design
-</title>
+<title>Home</title>
 </head>
   <body>
-    <h1> Summer Project One: Valid, Responsive-Ready HTML </h1>
+    <nav>
+    <a href="index.html">Home</a>
+    <a href="resume.html">Resume</a>
+    <a href="countries.html">Countries Visited</a>
+    </nav>
+    <h1> Summer Project Two: Valid, Responsive, RELATIVE-UNIT CSS </h1>
     <h3> Project Description: </h3>
-    <p>Create three richly structured HTML pages that will form the foundations of a professional web presence for yourself. One of the pages must be your professional resume. </p>
+    <p>This project builds on Project One, which you will fully style with CSS to provide a basic typographic treatment and responsive design that makes judicious use of media queries and relative units </p>
      <h3> Project Goals: </h3>
        <ul>
          <li> Write standard-complaint HTML-5</li>
@@ -25,13 +29,6 @@
         <li>Love to travel! </li>
         <li>Enjoy camping, hiking and fishing!</li>
       </ul>  
-        <h3> Links: </h3>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="resume.html">Resume</a></li>
-            <li><a href="countries.html">Countries Visited</a></li>
-        </ul>
-    </nav>
   </body>
 </html>
      
