--- a/resume.html
+++ b/resume.html
@@ -7,12 +7,9 @@
 </head>
   <body>
     <nav>
-          <h3> Links: </h3>
-            <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="resume.html">Resume</a></li>
-              <li><a href="countries.html">Countries Visited</a></li>
-            </ul>
+    <a href="index.html">Home</a>
+    <a href="resume.html">Resume</a>
+    <a href="countries.html">Countries Visited</a>
     </nav>
     <h1>Resume</h1>
     <h3>Name: Andy Dimnych</h3>
