updated the indexes ids

--- a/index.html
+++ b/index.html
@@ -5,30 +5,33 @@
 <link rel="stylesheet" type="text/css" href="normalize.css">
 <title>Home</title>
 </head>
-  <body>
+  <body id="main">
     <nav>
-    <a href="index.html">Home</a>
-    <a href="resume.html">Resume</a>
-    <a href="countries.html">Countries Visited</a>
-    </nav>
-    <h1> Summer Project Two: Valid, Responsive, RELATIVE-UNIT CSS </h1>
-    <h3> Project Description: </h3>
-    <p>This project builds on Project One, which you will fully style with CSS to provide a basic typographic treatment and responsive design that makes judicious use of media queries and relative units </p>
-     <h3> Project Goals: </h3>
-       <ul>
-         <li> Write standard-complaint HTML-5</li>
-         <li> Use HTML validator to assure compliance</li>
-         <li> Track the development of a project over time and collaborate with other using Basecamp</li>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="countries.html">Countries Visited</a></li>
       </ul>
-    <nav>
-    <iframe src="https://giphy.com/embed/qVmFtTnGQTCso" width="480" height="270" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/agconti-beach-hiking-qVmFtTnGQTCso">via GIPHY</a>
-    <h3>A little bit about me:</h3>
+    </nav>
+    <h1 id= "Project2"> Summer Project Two: Valid, Responsive, RELATIVE-UNIT CSS </h1>
+    <h3 id= "Description"> Project Description: </h3>
+    <p id="Projectdescription">This project builds on Project One, which you will fully style with CSS to provide a basic typographic treatment and responsive design that makes judicious use of media queries and relative units </p>
+    <h3 id="Goals"> Project Goals: </h3>
+      <ul>
+        <li> Produce modern standards-compliant, mobile-first CSS</li>
+        <li> Continue to write and revise valid, well-formed semantic HTML</li>
+        <li> Effectively comment on and format source code for maximum readability</li>
+      </ul>
+    <div id="around">
+      <iframe id="video" src="https://giphy.com/embed/qVmFtTnGQTCso" width="480" height="270" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/agconti-beach-hiking-qVmFtTnGQTCso">via GIPHY</a>
+    <h3 id="aboutme">A little bit about me:</h3>
       <ul> 
         <li>I was born in Ukraine, lived in the United States for 10 years</li>
         <li>I can speak Ukrainian, Russian and English</li>
         <li>Love to travel! </li>
         <li>Enjoy camping, hiking and fishing!</li>
-      </ul>  
+      </ul> 
+    </div> 
   </body>
 </html>
      
