--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" href="normalize.css">
+<link rel="stylesheet" href="css/styles.css">
 <title>Home</title>
 </head>
   <body id="main">
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="resume.html">Resume</a></li>
-        <li><a href="countries.html">Countries Visited</a></li>
-      </ul>
-    </nav>
+    <header>
+        <nav class="navigationbar">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="resume.html">Resume</a></li>
+            <li><a href="countries.html">Countries Visited</a></li>
+          </ul>
+        </nav>
+    </header>
     <h1 id= "Project2"> Summer Project Two: Valid, Responsive, RELATIVE-UNIT CSS </h1>
     <h3 id= "Description"> Project Description: </h3>
     <p id="Projectdescription">This project builds on Project One, which you will fully style with CSS to provide a basic typographic treatment and responsive design that makes judicious use of media queries and relative units </p>
@@ -32,6 +35,7 @@
         <li>Enjoy camping, hiking and fishing!</li>
       </ul> 
     </div> 
+
   </body>
 </html>
      
