--- a/countries.html
+++ b/countries.html
@@ -6,40 +6,42 @@
     <title>Countries I have visited 
     </title>
   </head>
-  <body>
+  <body id="countries">
     <nav>
-    <a href="index.html">Home</a>
-    <a href="resume.html">Resume</a>
-    <a href="countries.html">Countries Visited</a>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="resume.html">Resume</a></li>
+        <li><a href="countries.html">Countries Visited</a></li>
+      </ul>
     </nav>
-    <h1> Countries I have visited!</h1>
-    <h3> Summer 2016 </h3>
-    <p> Last Summer, I have visited Bulgaria, Hungary, Spain, Italy and Ukraine.</p>
-    <p>In Bulgaria, cities I've visited: </p>
-     <ul>
-       <li> Sofia</li>
-       <li> Plovdiv</li>
-       <li> Borovets</li>
-     </ul>
-    <p> This is Borovets</p>
+    <h1 id="Visited"> Countries I have visited!</h1>
+    <h3 id="Summer16"> Summer 2016 </h3>
+    <p id="lastsummer"> Last Summer, I have visited Bulgaria, Hungary, Spain, Italy and Ukraine.</p>
+    <h3 id= "Bulgaria"> In Bulgaria, cities I've visited: </h3>
+      <ul>
+        <li> Sofia</li>
+        <li> Plovdiv</li>
+        <li> Borovets</li>
+      </ul>
+    <p id="Borovets"> This is Borovets</p>
     <img src="Countries/Bulgaria.JPG" alt= "Mountains">
-    <p>In Ukraine, I've visited:</p>
+    <p id="Ukraine">In Ukraine, I've visited:</p>
      <ul>
        <li> Kiev</li>
        <li> Lviv</li>
        <li> Ivanov Frankivsk</li>
      </ul>
-     <p> This is Ivanov Frankivsk</p>
+     <p id="Ivanov"> This is Ivanov Frankivsk</p>
      <img src="Countries/Ukraine.JPG" alt= "Ukraine">
-     <p> In Spain, I've visited only Barcelona, and I've missed to go to the La Familia Sangrada because it was too packed</p>
+     <p id="Spain"> In Spain, I've visited only Barcelona, and I've missed to go to the La Familia Sangrada because it was too packed</p>
      <iframe width ="854" height= "480" src="https://www.youtube.com/embed/3smh2bIArms"></iframe>
-     <p> This is Barcelona Beach!</p>
+     <p id="Barcelona"> This is Barcelona Beach!</p>
      <img src="Countries/Barcelona.JPG" alt= "Barcelona">
-     <p> In Hungary, I've visited only Budapest</p>
+     <p id="Hungary"> In Hungary, I've visited only Budapest</p>
      <p> This is a castle in Hungary!</p>
      <img src="Countries/Budapest.JPG" alt= "Castle">
-     <p> In Italy, I've visited only Rome for a couple hours</p>
-     <p> This is the Colosseum !</p>
+     <p id="Italy"> In Italy, I've visited only Rome for a couple hours</p>
+     <p id="Colosseum"> This is the Colosseum !</p>
      <img src="Countries/Rome.JPG" alt= "Colosseum">
   </body>
 </html>
