--- a/resume.html
+++ b/resume.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="normalize.css">
+  <link rel="stylesheet" href="style.css">
   <title>My Resume</title>
 </head>
   <body>
