I have removed all the data points
made it more easier to read

--- a/resume.html
+++ b/resume.html
@@ -15,43 +15,30 @@
     <h1>Resume</h1>
     <h3>Name: Andy Dimnych</h3>
     <h2>Contact Details</h2>
-      <ul>
-        <li>Email adimnych@hawk.iit.edu</li>
-      </ul>
+    <p>Email adimnych@hawk.iit.edu</p>
     <h3>Education</h3>
-      <ul>
-        <li>Highschool Diploma - Von Steuben Metropolitan Science Center 2008 - 2012</li>
-        <li>Currently a Senior at IIT pursuing Bachelors in Information Technology Management and Master's Degree in Cyber Security
-        <ul>
-          <li>Current GPA 3.75</li>
-        </ul>
-      </ul>
+    <p>
+    <p>Highschool Diploma - Von Steuben Metropolitan Science Center 2008 - 2012</p>
+    <p>Currently a Senior at IIT pursuing Bachelors in Information Technology Management and Master's Degree in Cyber Security
+    <p>Current GPA 3.75</p> a
     <h2>Computer Skills</h2>
-      <ul>
-        <li>Microsoft Word,Excel, PowerPoint</li>
-        <li>Building/Repairing Desktops/Laptops</li>
-        <li>Quickbooks</li> 
-        <li>Email and Social Skills</li>
-      </ul>
+    <p>Microsoft Word,Excel, PowerPoint</p>
+    <p>Building/Repairing Desktops/Laptops</p>
+    <p>Quickbooks</p> 
+    <p>Email and Social Skills</p>
     <h2>Profeccient in Programming Languages</h2>
-      <ul>
-        <li>Python</li>
-        <li>Java</li>
-        <li>Ruby</li>
-        <li>C</li>
-      </ul>
+    <p>Python</p>
+    <p>Java</p>
+    <p>Ruby</p>
+    <p>C</p>
     <h2>My Work Experience</h2>
     <p>I have had countless jobs doing construction and heating and cooling with my fathers company, but now I am unemployeed because I am a full time student. </p>
     <h2>References</h2>
-    <p>Oksana Smith</p>
-    <ul>
-      <li>Email: Oksanachiago@yahoo.com </li>
-      <li>Number: 773-***-****</li>
-    </ul>
+    <p>Oksana Smith</p> 
+    <p>Email: Oksanachiago@yahoo.com </p>
+    <p>Number: 773-***-****</p>
     <p>Anatoliy Kostytskyy </p>
-    <ul>
-      <li>Email: Anakostytskyy@yahoo.com </li>
-      <li>Number: 773-***-****</li>
-    </ul>
+    <p>Email: Anakostytskyy@yahoo.com </p>
+    <p>Number: 773-***-****</p>
   </body>
 </html>
