--- a/resume.html
+++ b/resume.html
@@ -12,15 +12,15 @@
     <a href="resume.html">Resume</a>
     <a href="countries.html">Countries Visited</a>
     </nav>
-    <h1>Resume</h1>
-    <h3>Name: Andy Dimnych</h3>
-    <h2>Contact Details</h2>
+    <h1 id="Resume">Resume</h1>
+    <h3 id="Name">Name: Andy Dimnych</h3>
+    <h2 id="Contact">Contact Details</h2>
     <p>Email adimnych@hawk.iit.edu</p>
     <h3>Education</h3>
     <p>
     <p>Highschool Diploma - Von Steuben Metropolitan Science Center 2008 - 2012</p>
     <p>Currently a Senior at IIT pursuing Bachelors in Information Technology Management and Master's Degree in Cyber Security
-    <p>Current GPA 3.75</p> a
+    <p>Current GPA 3.75</p>
     <h2>Computer Skills</h2>
     <p>Microsoft Word,Excel, PowerPoint</p>
     <p>Building/Repairing Desktops/Laptops</p>
