multiple edits to make the pages better

--- a/countries.html
+++ b/countries.html
@@ -3,33 +3,34 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Countries I have visited 
     </title>
   </head>
-  <body id="countries">
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
+  <body class= "countries">
+    <nav class="navigationbar">
+      <l>
+        <<a href="index.html">Home</a></li>
         <li><a href="resume.html">Resume</a></li>
         <li><a href="countries.html">Countries Visited</a></li>
       </ul>
     </nav>
-    <h1 id="Visited"> Countries I have visited!</h1>
-    <h3 id="Summer16"> Summer 2016 </h3>
-    <p id="lastsummer"> Last Summer, I have visited Bulgaria, Hungary, Spain, Italy and Ukraine.</p>
+    <h1 class="Visited"> Countries I have visited!</h1>
+    <h3> Summer 2016 </h3>
+    <p> Last Summer, I have visited Bulgaria, Hungary, Spain, Italy and Ukraine.</p>
     <h3 id= "Bulgaria"> In Bulgaria, cities I've visited: </h3>
       <ul>
-        <li> Sofia</li>
-        <li> Plovdiv</li>
-        <li> Borovets</li>
+        <p> Sofia</p>
+        <p> Plovdiv</p>
+        <p> Borovets</p>
       </ul>
     <p id="Borovets"> This is Borovets</p>
     <img src="Countries/Bulgaria.JPG" alt= "Mountains">
     <p id="Ukraine">In Ukraine, I've visited:</p>
      <ul>
-       <li> Kiev</li>
-       <li> Lviv</li>
-       <li> Ivanov Frankivsk</li>
+       <p> Kiev</p>
+       <p> Lviv</p>
+       <p> Ivanov Frankivsk</p>
      </ul>
      <p id="Ivanov"> This is Ivanov Frankivsk</p>
      <img src="Countries/Ukraine.JPG" alt= "Ukraine">
