--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" href="normalize.css">
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 <title>Home</title>
 </head>
-  <body id="main">
+  <body class="mainpage">
     <header>
         <nav class="navigationbar">
           <ul>
@@ -16,26 +16,24 @@
           </ul>
         </nav>
     </header>
-    <h1 id= "Project2"> Summer Project Two: Valid, Responsive, RELATIVE-UNIT CSS </h1>
-    <h3 id= "Description"> Project Description: </h3>
-    <p id="Projectdescription">This project builds on Project One, which you will fully style with CSS to provide a basic typographic treatment and responsive design that makes judicious use of media queries and relative units </p>
-    <h3 id="Goals"> Project Goals: </h3>
-      <ul>
-        <li> Produce modern standards-compliant, mobile-first CSS</li>
-        <li> Continue to write and revise valid, well-formed semantic HTML</li>
-        <li> Effectively comment on and format source code for maximum readability</li>
-      </ul>
-    <div id="around">
+    <h1 class= "Project2"> Summer Project Two: Valid, Responsive, RELATIVE-UNIT CSS </h1>
+    <nav class="Project">
+      <h3>  Project Description: </h3>
+      <p> This project builds on Project One, which you will fully style with CSS to provide a basic typographic treatment and responsive design that makes judicious use of media queries and relative units </p>
+    </nav>
+    <div class="css">
+      <iframe id="video1" src="https://giphy.com/embed/RfZxJoEMoUkAU" width="480" height="270" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/gradient-css-hex-RfZxJoEMoUkAU">via GIPHY</a>
+    </div>
+    <div class="Goals"> Project Goals: </div>
+      <p> Produce modern standards-compliant, mobile-first CSS</p>
+      <p> Continue to write and revise valid, well-formed semantic HTML</p>
+      <p> Effectively comment on and format source code for maximum readability</p>
+    <h3 class="Aboutme">About me:</h3>
+      <p>I was born in Ukraine, lived in the United States for over 10 years</p>
+      <p>Enjoy camping, hiking and fishing and love to travel</p>
+    <div class="around">
       <iframe id="video" src="https://giphy.com/embed/qVmFtTnGQTCso" width="480" height="270" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/agconti-beach-hiking-qVmFtTnGQTCso">via GIPHY</a>
-    <h3 id="aboutme">A little bit about me:</h3>
-      <ul> 
-        <li>I was born in Ukraine, lived in the United States for 10 years</li>
-        <li>I can speak Ukrainian, Russian and English</li>
-        <li>Love to travel! </li>
-        <li>Enjoy camping, hiking and fishing!</li>
-      </ul> 
     </div> 
-
   </body>
 </html>
      
