--- a/resume.html
+++ b/resume.html
@@ -3,42 +3,56 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="normalize.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <title>My Resume</title>
 </head>
-  <body>
-    <nav>
-    <a href="index.html">Home</a>
-    <a href="resume.html">Resume</a>
-    <a href="countries.html">Countries Visited</a>
-    </nav>
-    <h1 id="Resume">Resume</h1>
-    <h3 id="Name">Name: Andy Dimnych</h3>
-    <h2 id="Contact">Contact Details</h2>
-    <p>Email adimnych@hawk.iit.edu</p>
-    <h3>Education</h3>
-    <p>
-    <p>Highschool Diploma - Von Steuben Metropolitan Science Center 2008 - 2012</p>
-    <p>Currently a Senior at IIT pursuing Bachelors in Information Technology Management and Master's Degree in Cyber Security
-    <p>Current GPA 3.75</p>
-    <h2>Computer Skills</h2>
-    <p>Microsoft Word,Excel, PowerPoint</p>
-    <p>Building/Repairing Desktops/Laptops</p>
-    <p>Quickbooks</p> 
-    <p>Email and Social Skills</p>
-    <h2>Profeccient in Programming Languages</h2>
-    <p>Python</p>
-    <p>Java</p>
-    <p>Ruby</p>
-    <p>C</p>
-    <h2>My Work Experience</h2>
-    <p>I have had countless jobs doing construction and heating and cooling with my fathers company, but now I am unemployeed because I am a full time student. </p>
-    <h2>References</h2>
-    <p>Oksana Smith</p> 
-    <p>Email: Oksanachiago@yahoo.com </p>
-    <p>Number: 773-***-****</p>
-    <p>Anatoliy Kostytskyy </p>
-    <p>Email: Anakostytskyy@yahoo.com </p>
-    <p>Number: 773-***-****</p>
-  </body>
+  <div class="resumemain">
+    <body class="resumebody">
+      <nav class="navigationbar">
+        <ol>
+          <p><a href="index.html">Home</a></p>
+          <p><a href="resume.html">Resume</a></p>
+          <p><a href="countries.html">Countries Visited</a></p>
+        </o>
+      </nav>
+      <h1 class="Resume">Resume</h1>
+      <div class ="Contact">
+        <h2 ="Contact">Contact Details</h2>
+        <p ="Name">Name: Andy Dimnych</p>
+        <p ="Email">Email adimnych@hawk.iit.edu</p>
+      </div>
+      <div class="Education">
+        <h3 ="Education">Education</h3>
+        <p>Highschool Diploma - Von Steuben Metropolitan Science Center 2008 - 2012</p>
+        <p>Currently a Senior at IIT pursuing Bachelors in Information Technology Management and Master's Degree in Cyber Security</p>
+        <p>Current GPA 3.75</p>
+      </div>
+      <div class="Computerskills">
+        <h2>Computer Skills</h2>
+        <p>Microsoft Word,Excel, PowerPoint</p>
+        <p>Building/Repairing Desktops/Laptops</p>
+        <p>Quickbooks</p> 
+        <p>Email and Social Skills</p>
+      </div>
+      <div class="Profeccient">
+      <h2>Profeccient in Programming Languages</h2>
+        <p>Python</p>
+        <p>Java</p>
+        <p>Ruby</p>
+        <p>C</p>
+      </div>
+      <div class="Work">
+        <h2>My Work Experience</h2>
+        <p>I have had countless jobs doing construction and heating and cooling with my fathers company, but now I am unemployeed because I am a full time student. </p>
+      <div class="References">
+        <h2>References</h2>
+        <p>Oksana Smith</p> 
+        <p>Email: Oksanachiago@yahoo.com </p>
+        <p>Number: 773-***-****</p>
+        <p>Anatoliy Kostytskyy </p>
+        <p>Email: Anakostytskyy@yahoo.com </p>
+        <p>Number: 773-***-****</p>
+      </div>
+    </body>
+  </div>
 </html>
