removed the ul and made them ps

--- a/countries.html
+++ b/countries.html
@@ -9,8 +9,8 @@
   </head>
   <body class= "countries">
     <nav class="navigationbar">
-      <l>
-        <<a href="index.html">Home</a></li>
+      <ul>
+        <li><a href="index.html">Home</a></li>
         <li><a href="resume.html">Resume</a></li>
         <li><a href="countries.html">Countries Visited</a></li>
       </ul>
@@ -19,19 +19,16 @@
     <h3> Summer 2016 </h3>
     <p> Last Summer, I have visited Bulgaria, Hungary, Spain, Italy and Ukraine.</p>
     <h3 id= "Bulgaria"> In Bulgaria, cities I've visited: </h3>
-      <ul>
-        <p> Sofia</p>
-        <p> Plovdiv</p>
-        <p> Borovets</p>
-      </ul>
+    <p> Sofia</p>
+    <p> Plovdiv</p>
+    <p> Borovets</p>
     <p id="Borovets"> This is Borovets</p>
     <img src="Countries/Bulgaria.JPG" alt= "Mountains">
     <p id="Ukraine">In Ukraine, I've visited:</p>
-     <ul>
-       <p> Kiev</p>
-       <p> Lviv</p>
-       <p> Ivanov Frankivsk</p>
-     </ul>
+    <p> Kiev</p>
+    <p> Lviv</p>
+    <p> Ivanov Frankivsk</p>
+
      <p id="Ivanov"> This is Ivanov Frankivsk</p>
      <img src="Countries/Ukraine.JPG" alt= "Ukraine">
      <p id="Spain"> In Spain, I've visited only Barcelona, and I've missed to go to the La Familia Sangrada because it was too packed</p>
