changed my <p> to <li>

--- a/index.html
+++ b/index.html
@@ -19,20 +19,27 @@
     <h1 class= "Project2"> Summer Project Two: Valid, Responsive, RELATIVE-UNIT CSS </h1>
     <nav class="Project">
       <h3>  Project Description: </h3>
-      <p> This project builds on Project One, which you will fully style with CSS to provide a basic typographic treatment and responsive design that makes judicious use of media queries and relative units </p>
+        <ul>
+          <li> This project builds on Project One, which you will fully style with CSS to provide a basic typographic treatment and responsive design that makes judicious use of media queries and relative units</li>
+        </ul>
     </nav>
     <div class="css">
       <iframe id="video1" src="https://giphy.com/embed/RfZxJoEMoUkAU" width="480" height="270" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/gradient-css-hex-RfZxJoEMoUkAU">via GIPHY</a>
     </div>
     <div class="Goals"> Project Goals: </div>
-      <p> Produce modern standards-compliant, mobile-first CSS</p>
-      <p> Continue to write and revise valid, well-formed semantic HTML</p>
-      <p> Effectively comment on and format source code for maximum readability</p>
+      <ul>
+        <li> Produce modern standards-compliant, mobile-first CSS </li>
+        <li> Continue to write and revise valid, well-formed semantic HTML</li>
+        <li> Effectively comment on and format source code for maximum readability </li>
+      </ul>
+     
     <h3 class="Aboutme">About me:</h3>
-      <p>I was born in Ukraine, lived in the United States for over 10 years</p>
-      <p>Enjoy camping, hiking and fishing and love to travel</p>
+      <ul> 
+        <li> I was born in Ukraine, lived in the United States for over 10 years</li>
+        <li> Enjoy camping, hiking and fishing and love to travel</li>
+      </ul>
     <div class="around">
-      <iframe id="video" src="https://giphy.com/embed/qVmFtTnGQTCso" width="480" height="270" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/agconti-beach-hiking-qVmFtTnGQTCso">via GIPHY</a>
+      <iframe id="video" src="https://giphy.com/embed/qVmFtTnGQTCso" width="480" height="270" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/agconti-beach-hiking-qVmFtTnGQTCso"></a>
     </div> 
   </body>
 </html>
