--- a/countries.html
+++ b/countries.html
@@ -19,26 +19,31 @@
     <h3> Summer 2016 </h3>
     <p> Last Summer, I have visited Bulgaria, Hungary, Spain, Italy and Ukraine.</p>
     <h3 id= "Bulgaria"> In Bulgaria, cities I've visited: </h3>
-    <p> Sofia</p>
-    <p> Plovdiv</p>
-    <p> Borovets</p>
-    <p id="Borovets"> This is Borovets</p>
+    <ul>
+      <li>Sofia</li>
+      <li>Plovdiv</li>
+      <li>Borovets</li>
+    </ul>
+    <p id="Borovets"> Borovets: </p>
     <img src="Countries/Bulgaria.JPG" alt= "Mountains">
-    <p id="Ukraine">In Ukraine, I've visited:</p>
-    <p> Kiev</p>
-    <p> Lviv</p>
-    <p> Ivanov Frankivsk</p>
-
-     <p id="Ivanov"> This is Ivanov Frankivsk</p>
+    <h3 id="Ukraine">In Ukraine, I've visited:</h3>
+    <ul>
+      <li>Kiev</li>
+      <li>Lviv</li>
+      <li>Ivanov Frankivsk</li>
+    </ul>
+    <h2 id="Ivanov"> This is Ivanov Frankivsk</h2>
      <img src="Countries/Ukraine.JPG" alt= "Ukraine">
-     <p id="Spain"> In Spain, I've visited only Barcelona, and I've missed to go to the La Familia Sangrada because it was too packed</p>
+     <h3 id="Spain">  La Familia Sangrada </h3>
      <iframe width ="854" height= "480" src="https://www.youtube.com/embed/3smh2bIArms"></iframe>
-     <p id="Barcelona"> This is Barcelona Beach!</p>
+     <h2 id="Missedspain"> I wanted to go here but I have missed it. </h2>
+
+     <h1 id="Barcelona"> Barcelona Beach!</h1>
      <img src="Countries/Barcelona.JPG" alt= "Barcelona">
-     <p id="Hungary"> In Hungary, I've visited only Budapest</p>
-     <p> This is a castle in Hungary!</p>
+     <h3 id="Hungary"> In Hungary, I've visited only Budapest</h3>
+     <h3> Castle in Budapest, Hungary!</h3>
      <img src="Countries/Budapest.JPG" alt= "Castle">
-     <p id="Italy"> In Italy, I've visited only Rome for a couple hours</p>
+     <h3 id="Italy"> In Italy, I went to Rome.</h3>
      <p id="Colosseum"> This is the Colosseum !</p>
      <img src="Countries/Rome.JPG" alt= "Colosseum">
   </body>
