--- a/countries.html
+++ b/countries.html
@@ -44,7 +44,7 @@
      <h3> Castle in Budapest, Hungary!</h3>
      <img src="Countries/Budapest.JPG" alt= "Castle">
      <h3 id="Italy"> In Italy, I went to Rome.</h3>
-     <p id="Colosseum"> This is the Colosseum !</p>
+     <h3 id="Colosseum"> This is the Colosseum !</h3>
      <img src="Countries/Rome.JPG" alt= "Colosseum">
   </body>
 </html>
