--- a/resume.html
+++ b/resume.html
@@ -6,19 +6,18 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <title>My Resume</title>
 </head>
-  <div class="resumemain">
     <body class="resumebody">
       <nav class="navigationbar">
-        <ol>
-          <p><a href="index.html">Home</a></p>
-          <p><a href="resume.html">Resume</a></p>
-          <p><a href="countries.html">Countries Visited</a></p>
-        </o>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="resume.html">Resume</a></li>
+          <li><a href="countries.html">Countries Visited</a></li>
+        </ul>
       </nav>
       <h1 class="Resume">Resume</h1>
       <div class ="Contact">
         <h2 ="Contact">Contact Details</h2>
-        <p ="Name">Name: Andy Dimnych</p>
+        <h1 ="Name">Name: Andy Dimnych</h1>
         <p ="Email">Email adimnych@hawk.iit.edu</p>
       </div>
       <div class="Education">
@@ -53,6 +52,6 @@
         <p>Email: Anakostytskyy@yahoo.com </p>
         <p>Number: 773-***-****</p>
       </div>
-    </body>
+    </body class>
   </div>
 </html>
