deleted via Gifphy

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </ul>
     </nav>
     <div class="css">
-      <iframe id="video1" src="https://giphy.com/embed/RfZxJoEMoUkAU" width="480" height="270" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/gradient-css-hex-RfZxJoEMoUkAU">via GIPHY</a>
+      <iframe id="video1" src="https://giphy.com/embed/RfZxJoEMoUkAU" width="480" height="270" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/gradient-css-hex-RfZxJoEMoUkAU"></a>
     </div>
     <div class="Goals"> Project Goals: </div>
       <ul>
