centered goals and about me

--- a/index.html
+++ b/index.html
@@ -26,17 +26,19 @@
     <div class="css">
       <iframe id="video1" src="https://giphy.com/embed/RfZxJoEMoUkAU" width="480" height="270" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/gradient-css-hex-RfZxJoEMoUkAU"></a>
     </div>
-    <div class="Goals"> Project Goals: </div>
+    <div class="Goals"> Project Goals: 
       <ul>
         <li> Produce modern standards-compliant, mobile-first CSS </li>
         <li> Continue to write and revise valid, well-formed semantic HTML</li>
         <li> Effectively comment on and format source code for maximum readability </li>
       </ul>
-    <h3 class="Aboutme">About me:</h3>
+    </div>
+    <h3 class="Aboutme">About me:
       <ul> 
         <li> I was born in Ukraine, lived in the United States for over 10 years</li>
         <li> Enjoy camping, hiking and fishing and love to travel</li>
       </ul>
+    </h3>
     <div class="around">
       <iframe id="video" src="https://giphy.com/embed/qVmFtTnGQTCso" width="480" height="270" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/agconti-beach-hiking-qVmFtTnGQTCso"></a>
     </div> 
