centering the whole page

--- a/countries.html
+++ b/countries.html
@@ -7,6 +7,7 @@
     <title>Countries I have visited 
     </title>
   </head>
+  <div class ="wraparound">
   <body class= "countries">
     <nav class="navigationbar">
       <ul>
@@ -47,5 +48,6 @@
      <img src="Countries/Rome.JPG" alt= "Colosseum">
      <h3 id="Colosseum"> This is the Colosseum !</h3>
   </body>
+  </div>
 </html>
 
