many updates to center page and writing

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
 <title>Home</title>
 </head>
+  <div class ="wraparound">
   <body class="mainpage">
     <header>
         <nav class="navigationbar">
@@ -43,6 +44,7 @@
       <iframe id="video" src="https://giphy.com/embed/qVmFtTnGQTCso" width="480" height="270" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/agconti-beach-hiking-qVmFtTnGQTCso"></a>
     </div> 
   </body>
+  </div>
 </html>
      
    
