--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <title>My Resume</title>
 </head>
+    <div class ="wraparound">
     <body class="resumebody">
       <nav class="navigationbar">
         <ul>
@@ -53,5 +54,6 @@
         <p>Number: 773-***-****</p>
       </div>
     </body class>
+    </div>
   </div>
 </html>
