--- a/index.html
+++ b/index.html
@@ -6,45 +6,45 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
 <title>Home</title>
 </head>
-  <div class ="wraparound">
   <body class="mainpage">
-    <header>
-        <nav class="navigationbar">
+      <div class ="wraparound">
+      <header>
+          <nav class="navigationbar">
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="resume.html">Resume</a></li>
+              <li><a href="countries.html">Countries Visited</a></li>
+            </ul>
+          </nav>
+      </header>
+      <h1 class= "Project2"> Summer Project Two: Valid, Responsive, RELATIVE-UNIT CSS </h1>
+      <nav class="Project">
+        <h3>  Project Description: </h3>
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="resume.html">Resume</a></li>
-            <li><a href="countries.html">Countries Visited</a></li>
+            <li> This project builds on Project One, which you will fully style with CSS to provide a basic typographic treatment and responsive design that makes judicious use of media queries and relative units</li>
           </ul>
-        </nav>
-    </header>
-    <h1 class= "Project2"> Summer Project Two: Valid, Responsive, RELATIVE-UNIT CSS </h1>
-    <nav class="Project">
-      <h3>  Project Description: </h3>
+      </nav>
+      <div class="css">
+        <iframe id="video1" src="https://giphy.com/embed/RfZxJoEMoUkAU" width="480" height="270" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/gradient-css-hex-RfZxJoEMoUkAU"></a>
+      </div>
+      <div class="Goals"> Project Goals: 
         <ul>
-          <li> This project builds on Project One, which you will fully style with CSS to provide a basic typographic treatment and responsive design that makes judicious use of media queries and relative units</li>
+          <li> Produce modern standards-compliant, mobile-first CSS </li>
+          <li> Continue to write and revise valid, well-formed semantic HTML</li>
+          <li> Effectively comment on and format source code for maximum readability </li>
         </ul>
-    </nav>
-    <div class="css">
-      <iframe id="video1" src="https://giphy.com/embed/RfZxJoEMoUkAU" width="480" height="270" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/gradient-css-hex-RfZxJoEMoUkAU"></a>
-    </div>
-    <div class="Goals"> Project Goals: 
-      <ul>
-        <li> Produce modern standards-compliant, mobile-first CSS </li>
-        <li> Continue to write and revise valid, well-formed semantic HTML</li>
-        <li> Effectively comment on and format source code for maximum readability </li>
-      </ul>
-    </div>
-    <h3 class="Aboutme">About me:
-      <ul> 
-        <li> I was born in Ukraine, lived in the United States for over 10 years</li>
-        <li> Enjoy camping, hiking and fishing and love to travel</li>
-      </ul>
-    </h3>
-    <div class="around">
-      <iframe id="video" src="https://giphy.com/embed/qVmFtTnGQTCso" width="480" height="270" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/agconti-beach-hiking-qVmFtTnGQTCso"></a>
-    </div> 
+      </div>
+      <h3 class="Aboutme">About me:</h3>
+        <ul> 
+          <li> I was born in Ukraine, lived in the United States for over 10 years</li>
+          <li> Enjoy camping, hiking and fishing and love to travel</li>
+        </ul>
+      
+      <div class="around">
+        <iframe id="video" src="https://giphy.com/embed/qVmFtTnGQTCso" width="480" height="270" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/agconti-beach-hiking-qVmFtTnGQTCso"></a>
+      </div>
+      </div> 
   </body>
-  </div>
 </html>
      
    
