--- a/countries.html
+++ b/countries.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Countries I have visited 
+    <title>images I have visited 
     </title>
   </head>
   <body class= "countries">
@@ -13,10 +13,10 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="resume.html">Resume</a></li>
-          <li><a href="countries.html">Countries Visited</a></li>
+          <li><a href="countries.html">images Visited</a></li>
         </ul>
       </nav>
-      <h1 class="Visited"> Countries I have visited!</h1>
+      <h1 class="Visited"> images I have visited!</h1>
       <h3> Summer 2016 </h3>
       <p> Last Summer, I have visited Bulgaria, Hungary, Spain, Italy and Ukraine.</p>
       <h3 id= "Bulgaria"> In Bulgaria, cities I've visited: </h3>
@@ -26,7 +26,7 @@
         <li>Borovets</li>
       </ul>
       <p id="Borovets"> Borovets: </p>
-      <img src="Countries/Bulgaria.JPG" alt= "Mountains">
+      <img src="images/Bulgaria.JPG" alt= "Mountains">
       <h3 id="Ukraine">In Ukraine, I've visited:</h3>
       <ul>
         <li>Kiev</li>
@@ -34,20 +34,20 @@
         <li>Ivanov Frankivsk</li>
       </ul>
       <h2 id="Ivanov"> This is Ivanov Frankivsk</h2>
-       <img src="Countries/Ukraine.JPG" alt= "Ukraine">
+       <img src="images/Ukraine.JPG" alt= "Ukraine">
        <h2 id="Spain">  La Familia Sangrada </h2>
        <iframe width ="854" height= "480" src="https://www.youtube.com/embed/3smh2bIArms"></iframe>
        <h3 id="Missedspain"> I wanted to go here but I have missed it. </h3>
 
        <h1 id="Barcelona"> Barcelona Beach!</h1>
-       <img src="Countries/Barcelona.JPG" alt= "Barcelona">
+       <img src="images/Barcelona.JPG" alt= "Barcelona">
        <h3 id="Hungary"> In Hungary, I've visited only Budapest</h3>
        <h3> Castle in Budapest, Hungary!</h3>
-       <img src="Countries/Budapest.JPG" alt= "Castle">
+       <img src="images/Budapest.JPG" alt= "Castle">
        <h3 id="Italy"> In Italy, I went to Rome.</h3>
-       <img src="Countries/Rome.JPG" alt= "Colosseum">
+       <img src="images/Rome.JPG" alt= "Colosseum">
        <h3 id="Colosseum"> This is the Colosseum !</h3>
     </div>
-  </body>
+  <body></body>
 </html>
 
