--- a/countries.html
+++ b/countries.html
@@ -16,7 +16,7 @@
           <li><a href="countries.html">images Visited</a></li>
         </ul>
       </nav>
-      <h1 class="Visited"> images I have visited!</h1>
+      <h1 class="Visited"> Countries I have visited!</h1>
       <h3> Summer 2016 </h3>
       <p> Last Summer, I have visited Bulgaria, Hungary, Spain, Italy and Ukraine.</p>
       <h3 id= "Bulgaria"> In Bulgaria, cities I've visited: </h3>
