--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
       </header>
       <h1 class= "Project2"> Summer Project Two: Valid, Responsive, RELATIVE-UNIT CSS </h1>
       <nav class="Project">
-        <h3>  Project Description: </h3>
+        <h1>  Project Description: </h1>
+        <div class="projectdescr">
           <ul>
             <li> This project builds on Project One, which you will fully style with CSS to provide a basic typographic treatment and responsive design that makes judicious use of media queries and relative units</li>
           </ul>
+        </div>
       </nav>
       <div class="css">
         <iframe id="video1" src="https://giphy.com/embed/RfZxJoEMoUkAU" width="480" height="270" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/gradient-css-hex-RfZxJoEMoUkAU"></a>
@@ -35,10 +37,12 @@
         </ul>
       </div>
       <h3 class="Aboutme">About me:</h3>
+      <div class="myinfo">
         <ul> 
           <li> I was born in Ukraine, lived in the United States for over 10 years</li>
           <li> Enjoy camping, hiking and fishing and love to travel</li>
         </ul>
+      </div>
       
       <div class="around">
         <iframe id="video" src="https://giphy.com/embed/qVmFtTnGQTCso" width="480" height="270" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/agconti-beach-hiking-qVmFtTnGQTCso"></a>
