--- a/countries.html
+++ b/countries.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>images I have visited 
+    <title>Countries I have visited!
     </title>
   </head>
   <body class= "countries">
