--- a/resume.html
+++ b/resume.html
@@ -17,12 +17,12 @@
         </nav>
         <h1 class="Resume">Resume</h1>
         <div class ="Contact">
-          <h2 class ="Contact"> Contact Details</h2>
-          <h1 class="Name">Name: Andy Dimnych</h1>
-          <p class ="Email">Email adimnych@hawk.iit.edu</p>
+          <h1 class ="Contact"> Contact Details</h1>
+          <h2 class="Name">Name: Andy Dimnych</h2>
+          <h2 class ="Email">Email adimnych@hawk.iit.edu</h2>
         </div>
         <div class="Education">
-          <h3 class="Education">Education</h3>
+          <h2 class="Education">Education</h2>
           <p>Highschool Diploma - Von Steuben Metropolitan Science Center 2008 - 2012</p>
           <p>Currently a Senior at IIT pursuing Bachelors in Information Technology Management and Master's Degree in Cyber Security</p>
           <p>Current GPA 3.75</p>
