much editing later

--- a/resume.html
+++ b/resume.html
@@ -27,6 +27,9 @@
           <p>Currently a Senior at IIT pursuing Bachelors in Information Technology Management and Master's Degree in Cyber Security</p>
           <p>Current GPA 3.75</p>
         </div>
+        <div id="Andy">
+          <img src="images/Andy.jpg" alt="Andy" width="200" height="300">
+        </div>
         <div class="Computerskills">
           <h2>Computer Skills</h2>
           <p>Microsoft Word,Excel, PowerPoint</p>
@@ -34,6 +37,10 @@
           <p>Quickbooks</p> 
           <p>Email and Social Skills</p>
         </div>
+        <div class="computergif">
+        <iframe id="computervid" src="https://giphy.com/embed/26tn33aiTi1jkl6H6" width="480" height="270" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/screen-monitor-closeup-26tn33aiTi1jkl6H6"></a>
+        </div>
+      </div>
         <div class="Profeccient">
         <h2>Profeccient in Programming Languages</h2>
           <p>Python</p>
