trying to make image float to the right

--- a/resume.html
+++ b/resume.html
@@ -28,7 +28,7 @@
           <p>Current GPA 3.75</p>
         </div>
         <div id="Andy">
-          <img src="images/Andy.jpg" alt="Andy" width="200" height="300">
+          <img id= "Andy" src="images/Andy.jpg" width ="200" height="300" alt="Andy">
         </div>
         <div class="Computerskills">
           <h2>Computer Skills</h2>
