updated after running validations

--- a/countries.html
+++ b/countries.html
@@ -48,6 +48,6 @@
        <img src="images/Rome.JPG" alt= "Colosseum">
        <h3 id="Colosseum"> This is the Colosseum !</h3>
     </div>
-  <body></body>
+  </body>
 </html>
 
