--- a/resume.html
+++ b/resume.html
@@ -21,14 +21,12 @@
           <h2 class="Name">Name: Andy Dimnych</h2>
           <h2 class ="Email">Email adimnych@hawk.iit.edu</h2>
         </div>
+        <img id= "Andy" src="images/Andy.jpg" width ="200" height="300" alt="Andy"
         <div class="Education">
           <h2 class="Education">Education</h2>
           <p>Highschool Diploma - Von Steuben Metropolitan Science Center 2008 - 2012</p>
           <p>Currently a Senior at IIT pursuing Bachelors in Information Technology Management and Master's Degree in Cyber Security</p>
           <p>Current GPA 3.75</p>
-        </div>
-        <div id="Andy">
-          <img id= "Andy" src="images/Andy.jpg" width ="200" height="300" alt="Andy">
         </div>
         <div class="Computerskills">
           <h2>Computer Skills</h2>
@@ -61,6 +59,5 @@
           <p>Number: 773-***-****</p>
       </div>
     </div>
-  </div>
   </body>
 </html>
