--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </header>
       <h1 class= "Project2"> Summer Project Two: Valid, Responsive, RELATIVE-UNIT CSS </h1>
       <nav class="Project">
-        <h1>  Project Description: </h1>
+      <h2 class= "Description">  Project Description: </h2>
         <div class="projectdescr">
           <ul>
             <li> This project builds on Project One, which you will fully style with CSS to provide a basic typographic treatment and responsive design that makes judicious use of media queries and relative units</li>
