--- a/countries.html
+++ b/countries.html
@@ -13,7 +13,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="resume.html">Resume</a></li>
-          <li><a href="countries.html">images Visited</a></li>
+          <li><a href="countries.html">Countries Visited</a></li>
         </ul>
       </nav>
       <h1 class="Visited"> Countries I have visited!</h1>
