added float right

--- a/resume.html
+++ b/resume.html
@@ -21,7 +21,7 @@
         <h2 class="Name">Name: Andy Dimnych</h2>
         <h2 class ="Email">Email adimnych@hawk.iit.edu</h2>
       </div>
-      <img id= "Andy" src="images/Andy.jpg" width ="200" height="300" alt="Andy">
+      <img id= "Andy" src="images/Andy.jpg" width ="200" height="300" alt="Andy" style="float:right;">
       <div class="Education">
         <h2 class="Education">Education</h2>
         <p>Highschool Diploma - Von Steuben Metropolitan Science Center 2008 - 2012</p>
