--- a/countries.html
+++ b/countries.html
@@ -26,7 +26,7 @@
         <li>Borovets</li>
       </ul>
       <p id="Borovets"> Borovets: </p>
-      <img src="images/Bulgaria.JPG" alt= "Mountains">
+      <p><img src="images/Bulgaria.JPG" alt= "Mountains">
       <h3 id="Ukraine">In Ukraine, I've visited:</h3>
       <ul>
         <li>Kiev</li>
@@ -45,7 +45,7 @@
        <h3> Castle in Budapest, Hungary!</h3>
        <img src="images/Budapest.JPG" alt= "Castle">
        <h3 id="Italy"> In Italy, I went to Rome.</h3>
-       <img src="images/Rome.JPG" alt= "Colosseum">
+       <img src="images/Rome.JPG" alt= "Colosseum" >
        <h3 id="Colosseum"> This is the Colosseum !</h3>
     </div>
   </body>
